# cr-ta-travel-planner-api

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: artic_api.py  crud.py  database.py  main.py  models.py  schemas.py
app/routers/: places.py  projects.py
